[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "dnslib>=0.9.26",
    "fastapi[standard]>=0.115.12",
    "openai>=1.79.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.34.2",
]
