[project]
name = "THE-EPIC-BATTLE-OF-204"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.6.3",
    "dnslib>=0.9.26",
    "fastapi[standard]>=0.115.12",
    "openai>=1.79.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.34.2",
]
